# Quiz-Generator-Rust

./: Cargo.toml  LICENSE  README.md
Quiz-Generator/: Cargo.toml
Quiz-Generator/src/: main.rs
Quizzes/: Quiz1.xml
answer_keys/: answer_key_1.xml  answer_key_2.xml
src/: answer_key.rs  main.rs  question_bank.rs  quiz.rs  quiz_builder.rs  tempCodeRunnerFile.rs
