[package]
name = "Quiz-Generator-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde-xml-rs = "0.6.0"
env_logger = "0.11.5"
log = "0.4"          # The log facade
fern = "0.7"         # A backend for flexible logging
chrono = "0.4"       # For timestamp formatting (optional)
glob = "0.3.1"